--- a/styles/custom landing.css
+++ b/styles/custom landing.css
@@ -66,8 +66,8 @@ h1, h2, h3, h4{
 	font-family: 'Lato', sans-serif;
 	color: white;
 	font-weight: lighter;
-	margin-bottom: 20px;
-	font-size: 14px;
+	margin-bottom: 30px;
+	font-size: 16px;
 }
 
 
@@ -88,7 +88,7 @@ Banner
 
 .slider .banner .banner_bg img {
 	animation: none;
-	max-width: 100%
+	background: top center fixed;
 }
 
 .slider .banner .bann_caption, .owl-carousel .bann_caption {
@@ -266,6 +266,10 @@ Mobile and Tablet Screen
 =============================================== */
 @media screen and (max-width:991px) {
 
+.slider .banner .bann_caption{
+ 	z-index: 10;
+ 	position: absolute;
+}
 .slider .banner .bann_caption{
  	z-index: 10;
  	position: absolute;
