--- a/styles/custom landing.css
+++ b/styles/custom landing.css
@@ -58,14 +58,15 @@ h1, h2, h3, h4{
 .bann_caption h3 {
     font-size: 30px;
     line-height: 40px;
-    font-weight: lighter;
+    font-weight: 300;
     margin-bottom: 50px;
+    font-family: 'lato', sans-serif;
 }
 
 .bann_caption p{
 	font-family: 'Lato', sans-serif;
 	color: white;
-	font-weight: lighter;
+	font-weight: 200;
 	margin-bottom: 30px;
 	font-size: 16px;
 }
