Chgt image slider
Changement de l’image. Recadrage et flou

--- a/styles/custom landing.css
+++ b/styles/custom landing.css
@@ -85,7 +85,7 @@ Banner
 =============================================== */
 .slider {
 	height: 700px;
-	background-image: url(../images/slider-landing.svg);
+	background-image: url(../images/slider-landing.png);
 	background-repeat: no-repeat;
 }
 
