--- a/styles/custom landing.css
+++ b/styles/custom landing.css
@@ -86,6 +86,8 @@ Banner
 .slider {
 	height: 700px;
 	background-repeat: no-repeat;
+	background-image: url(../images/modames-slider.png);
+	background-size: cover;
 }
 
 .slider .banner .banner_bg img {
@@ -96,20 +98,22 @@ Banner
 .slider .banner .bann_caption, .owl-carousel .bann_caption {
 	top: 100px;
 	text-align: left;
-	position: absolute;
-	z-index: 10;
+	height: 700px;
+
 }
 
 /*punchline slider*/
 .bann_caption h4 {
 	color: white;
 }
+
 .bann_caption img{
 	position: left;
 	padding-top: 0px;
 	padding-bottom: 80px;
 	height: 180px;
 }
+
 
 .container {
 	margin-left: 80px;
