--- a/styles/custom landing.css
+++ b/styles/custom landing.css
@@ -122,10 +122,10 @@ Banner
 #mce-EMAIL{
 	background: none;
 	border-color: white;
-	border-radius: 20px;
+	border-radius: 4px;
 	border: 1px solid;
 	width: 250px;
-	height: 38px;
+	height: 40px;
 	line-height: 38px;
 	padding: 0 20px;
 	position: relative;
@@ -135,19 +135,20 @@ Banner
 
 #mc-embedded-subscribe{
 	border: none;
+	margin-left: 20px;
 	background-color: #FDC85C;
-	border-radius: 50%;
-	width: 40px;
+	border-radius: 4px;
+	width: 55px;
     height: 40px;
-    position: absolute;;
+    position: absolute;
+    color: white;
  }
 
  #mc-embedded-subscribe:hover{
 	border: none;
 	background-color: #40B8C7;
-	border-radius: 50%;
-	width: 40px;
-    height: 40px;
+	border-radius: 4px;
+
  }
 
 /* ==============================================
