--- a/styles/custom-landing.css
+++ b/styles/custom-landing.css
@@ -78,8 +78,10 @@ h1, h2, h3, h4{
 	font-weight: normal;
 	text-align: center;
 }
-/* Order Button */
-
+/* Mail to */
+.mailto a{
+	color: white;
+}
 
 /* ==============================================
 Banner
