--- a/styles/custom-landing.css
+++ b/styles/custom-landing.css
@@ -70,6 +70,7 @@ h1, h2, h3, h4{
 	font-weight: 300;
 	margin-bottom: 20px;
 	font-size: 1.2em;
+	text-shadow: 0em 0em 1em #333333;
 }
 
 
@@ -78,16 +79,12 @@ h1, h2, h3, h4{
 	font-weight: normal;
 	text-align: center;
 }
-/* Mail to */
-.mailto a{
-	color: white;
-}
 
 /* ==============================================
 Banner
 =============================================== */
 .slider {
-	height: 520px;
+	height: 550px;
 	background-repeat: no-repeat;
 	background-image: url(../images/modames-slider.png);
 	background-size: cover;
@@ -118,12 +115,28 @@ Banner
 .container {
 	margin-left: 80px;
 }
+.bann_caption .brand{
+	margin-top: 20px;
+	font-size: 1em;
+	font-weight: 700;
+}
+
+/*Mail to*/
+.bann_caption a{
+	margin: 0;
+	font-size: 1em;
+	color: white;
+}
+
+.bann_caption a:hover{
+	text-decoration: underline;
+}	
 
 /*Champ email*/
 
 #mce-EMAIL{
 	background: none;
-	border-color: white;
+	border-color: white !important;
 	border-radius: 4px;
 	border: 1px solid;
 	width: 250px;
