--- a/styles/custom-landing.css
+++ b/styles/custom-landing.css
@@ -51,6 +51,10 @@ Animations
 /* ==============================================
 Default Styles
 =============================================== */
+::selection {
+    background: #FDC85C;
+}
+
 h1, h2, h3, h4{
 	font-family: 'Lato', sans-serif;
 }
