--- a/custom-landing.css
+++ b/custom-landing.css
@@ -93,7 +93,7 @@ Banner
 .slider {
 	height: 600px;
 	background-repeat: no-repeat;
-	background-image: url(../images/modames-slider-shirt.jpeg);
+	background-image: url(../images/modames-slider-shirt.png);
 	background-size: cover;
 	background-position: center;
 }
