Background image design

--- a/styles/custom-landing.css
+++ b/styles/custom-landing.css
@@ -157,7 +157,7 @@ div.mission p{
 
 
 section.slider{
-	background-image: url("../images/test-slider.jpg");
+	background-image: url("../images/modames-slider.png");
 	max-height: 640px;
 	background-position: center;
 	background-size: cover;
