--- a/styles/custom-landing.css
+++ b/styles/custom-landing.css
@@ -218,6 +218,26 @@ section.slider{
  	font-size: 3em;
  }
  /* ==============================================
+ Mission
+ =============================================== */
+
+ section.container-fluid.mission{
+	text-align: center;
+	margin: 80px auto 80px auto;
+ }
+ .mission-statement{
+ 	color: #333333;
+ 	font-weight: 300;
+ 	font-family: 'Lato', sans-serif;
+ 	font-size: 1.2em;
+ 	padding: 15px 0px;
+ 	line-height: 50px;
+	width: 45%;
+	margin: auto;
+ }
+
+
+ /* ==============================================
  Partner
  =============================================== */
 p.brand{
@@ -226,7 +246,10 @@ p.brand{
   font-size: 1.2em;
   color: #333333;
   font-family: 'Lato', sans-serif;
-  margin:50px auto 70px auto;
+  margin: 50px auto 50px auto;
+}
+.brand-bloc{
+	background-color: rgb(255, 251, 241);
 }
 a.contact-partner{
   text-decoration: underline;
@@ -328,6 +351,17 @@ div.sub-mission p{
 	font-size: 1em;
   width: 80%;
   margin: 20px auto;
+}
+
+/*Mission*/
+section.container-fluid.mission {
+ text-align: center;
+ margin: 80px auto 80px auto;
+}
+.mission-statement{
+	line-height: 30px;
+	margin: auto;
+	width: 70%;
 }
 /*Partner*/
 p.brand{
